# web_bot

./: pyproject.toml  restart_mifi.bat  restart_mifi.py  web_script.py
